Fix formatting on mobile navbar

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -113,6 +113,9 @@
     .home-commission-wrapper {
         padding-left: 150px;
     }
+    .home-category-img {
+        height: 115%;
+    }
 }
 
 @media screen and (max-width: 992px){
