--- a/static/css/base.css
+++ b/static/css/base.css
@@ -483,8 +483,10 @@ footer li {
         top: 5%;
         left: 98%;
     }
+    .nav-link{
+        text-align: left;
 }
-
+}
 
 @media (max-width: 991px) {
     .card-img-top {
